# plutus-layer2

./: LICENSE  NOTICE  README.md  flake.nix  layer2.cabal
contract/: .gitignore  contract.cabal  flake.nix
contract/src/: Validator.hs
contract/src/Plutus/: MerkleTree.hs
contract/src/PlutusTx/: Layer2.hs  MerkleTree.hs
contract/src/Validator/: Trace.hs  Types.hs
dapp/: .gitignore  flake.nix  package-lock.json  package.json
dapp/src/: Contract.purs  Main.purs
dapp/src/Contract/: Crypto.purs  Layer2.purs  MerkleTree.purs  Script.purs  Types.purs
dapp/test/: Main.purs
src/: Main.hs  Validator.hs
src/PlutusTx/: List.hs
