cabal-version: 3.0

name: contract
version: 1.0.0.2

common lang
  ghc-options: -Wall 

executable contract
  import: lang
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  other-modules:
    Plutus.MerkleTree
    PlutusTx.List
    Validator
  build-depends:
      base
    , base16-bytestring
    , text
    , bytestring
    , cardano-api
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , plutus-script-utils
    , serialise
